# newTpOnpenGl

./: CMakeLists.txt  README.md
assets/: basicMap.txt
assets/map/: basicMap.txt  graveyardMap.txt  speedBallMap.txt
src/: Player.cpp  Player.h  main.cpp
src/Classes/: Camera.cpp  Camera.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Text.cpp  Text.h  wallRect.cpp  wallRect.h
src/Managers/: CollisionManager.cpp  CollisionManager.h  EnemyManager.cpp  EnemyManager.h  EntityManager.cpp  EntityManager.h  GameManager.cpp  GameManager.h  MenuManager.cpp  MenuManager.h  ProjectileManager.cpp  ProjectileManager.h  TextureManager.cpp  TextureManager.h
src/Utils/: Include.h  glUtils.cpp  glUtils.h
src/Utils/Pathfinding/: Node.cpp  Node.h  aStar.cpp  aStar.h
